--- a/src/nad-index.css
+++ b/src/nad-index.css
@@ -68,6 +68,7 @@ foreignObject.nad-text-nodes {
     padding: 10px;
     border-radius: 10px;
     cursor: grab;
+    border: 2px solid rgba(0,0,0,0);
 }
 .nad-legend-square {
     display: inline-block;
@@ -270,20 +271,17 @@ g.nad-disconnected > g.nad-disconnected {
     display: none;
 }
 
-.nad-busnode-highlight{
-    filter:  drop-shadow(0 0 8px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 4px rgba(255, 255, 255, 0.3));
-    transform: scale(1.3);
-}
+/* Help visibility when hovering over a NAD's VL or label */
 .nad-textnode-highlight {
-    filter:  drop-shadow(0 0 8px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 4px rgba(255, 255, 255, 0.3));
-    transform: scale(1.1);
+    z-index: 99999;
+    border: 2px solid #90929477;
 }
-
-.nad-zoom-2000 .nad-busnode-highlight {
-    filter:  drop-shadow(0 0 8px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 4px rgba(255, 255, 255, 0.3));
-    transform: scale(1.6);
+:is(.nad-zoom-0) .nad-busnode-highlight {
+    transform: scale(1.12);
 }
-.nad-zoom-2000 .nad-textnode-highlight  {
-    filter:  drop-shadow(0 0 8px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 4px rgba(255, 255, 255, 0.3));
-    transform: scale(1.4);
+:is(.nad-zoom-2000) .nad-busnode-highlight {
+    transform: scale(1.2);
+}
+:is(.nad-zoom-2000) .nad-textnode-highlight {
+    transform: scale(1.3);
 }
