fix(CSS): remove font family when useless or not the one from MUI default theme Copy default font family value from the them in svgs to use at least one generic font family as well here. (it doesn't change Robot use here in modern navigator)
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -161,17 +161,17 @@ code {
 .sld-label {
     stroke: none;
     fill: black;
-    font: 11px 'Verdana';
+    font-size: 11px;
 }
 .sld-graph-label {
     stroke: none;
     fill: black;
-    font: 14px 'Verdana';
+    font-size: 14px;
 }
 .sld-legend {
     stroke: none;
     fill: black;
-    font: 11px Verdana;
+    font-size: 11px;
 }
 .sld-node {
     stroke: none;
