Small fix : default value if there is no defined zoom level
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>

--- a/src/nad-index.css
+++ b/src/nad-index.css
@@ -276,6 +276,9 @@ g.nad-disconnected > g.nad-disconnected {
     z-index: 99999;
     border: 2px solid #90929477;
 }
+.nad-busnode-highlight {
+    transform: scale(1.12);
+}
 :is(.nad-zoom-0) .nad-busnode-highlight {
     transform: scale(1.12);
 }
