--- a/src/index.css
+++ b/src/index.css
@@ -288,6 +288,32 @@ code {
     stroke-dasharray: 3, 3;
 }
 
+/* SLD Highlight Classes */
+.sld-voltage-level:has(.sld-bus-0:hover) .sld-bus-0.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-1:hover) .sld-bus-1.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-2:hover) .sld-bus-2.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-3:hover) .sld-bus-3.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-4:hover) .sld-bus-4.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-5:hover) .sld-bus-5.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-6:hover) .sld-bus-6.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-7:hover) .sld-bus-7.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-8:hover) .sld-bus-8.sld-busbar-section,
+.sld-voltage-level:has(.sld-bus-9:hover) .sld-bus-9.sld-busbar-section {
+    stroke-width: 5px
+}
+.sld-voltage-level:has(.sld-bus-0:hover) .sld-bus-0.sld-wire,
+.sld-voltage-level:has(.sld-bus-1:hover) .sld-bus-1.sld-wire,
+.sld-voltage-level:has(.sld-bus-2:hover) .sld-bus-2.sld-wire,
+.sld-voltage-level:has(.sld-bus-3:hover) .sld-bus-3.sld-wire,
+.sld-voltage-level:has(.sld-bus-4:hover) .sld-bus-4.sld-wire,
+.sld-voltage-level:has(.sld-bus-5:hover) .sld-bus-5.sld-wire,
+.sld-voltage-level:has(.sld-bus-6:hover) .sld-bus-6.sld-wire,
+.sld-voltage-level:has(.sld-bus-7:hover) .sld-bus-7.sld-wire,
+.sld-voltage-level:has(.sld-bus-8:hover) .sld-bus-8.sld-wire,
+.sld-voltage-level:has(.sld-bus-9:hover) .sld-bus-9.sld-wire {
+    stroke-width: 3px
+}
+
 /* Network modification tree */
 
 .react-flow__node-ROOT {
