--- a/src/nad-index.css
+++ b/src/nad-index.css
@@ -7,13 +7,6 @@
     fill: none;
     cursor: default;
 }
-.nad-edge-path:hover {
-    stroke-width: 35px;
-    cursor: crosshair !important; /* DO NOT COMMIT, just for testing */
-}
-mask polyline {
-    stroke-width: 0.25%;
-}
 .nad-text-edges { /* Hidden for now */
     display: none;
 }
@@ -179,13 +172,9 @@ g.nad-disconnected > g.nad-disconnected {
     :is(
         .nad-branch-edges .nad-edge-path, .nad-3wt-edges .nad-edge-path,
         .nad-branch-edges .nad-winding, .nad-3wt-nodes .nad-winding,
-        .nad-vl-nodes circle.nad-unknown-busnode,
-        mask polyline
+        .nad-vl-nodes circle.nad-unknown-busnode
         ) {
         stroke-width: 3;
-    }
-    .nad-edge-path:hover {
-        stroke-width: 35px !important;
     }
     :is(
         .nad-branch-edges .nad-overload .nad-edge-path
@@ -193,21 +182,7 @@ g.nad-disconnected > g.nad-disconnected {
         animation: line-blink-nad-zoom-0 0.75s infinite steps(1, start);
     }
 }
-.nad-zoom-2000 {
-    .nad-edge-path:hover {
-        stroke-width: 55px !important;;
-    }
-}
-.nad-zoom-3500 {
-    .nad-edge-path:hover {
-        stroke-width: 75px !important;;
-    }
-}
-.nad-zoom-6000 {
-    .nad-edge-path:hover {
-        stroke-width: 105px !important;;
-    }
-}
+
 /* Makes the dashed lines' spaces consistent when zooming */
 :is(.nad-zoom-0, .nad-zoom-2000) :is(
     .nad-disconnected .nad-edge-path
@@ -221,13 +196,9 @@ g.nad-disconnected > g.nad-disconnected {
     :is(
         .nad-branch-edges .nad-edge-path, .nad-3wt-edges .nad-edge-path,
         .nad-branch-edges .nad-winding, .nad-3wt-nodes .nad-winding,
-        .nad-vl-nodes circle.nad-unknown-busnode,
-        mask polyline
+        .nad-vl-nodes circle.nad-unknown-busnode
         ) {
         stroke-width: 0.2%;
-    }
-    .nad-edge-path:hover {
-        stroke-width: 150px !important;;
     }
     :is(
         .nad-branch-edges .nad-overload .nad-edge-path
@@ -251,13 +222,9 @@ g.nad-disconnected > g.nad-disconnected {
     :is(
         .nad-branch-edges .nad-edge-path, .nad-3wt-edges .nad-edge-path,
         .nad-branch-edges .nad-winding, .nad-3wt-nodes .nad-winding,
-        .nad-vl-nodes circle.nad-unknown-busnode,
-        mask polyline
+        .nad-vl-nodes circle.nad-unknown-busnode
         ) {
         stroke-width: 0.1%;
-    }
-    .nad-edge-path:hover {
-        stroke-width: 200px !important;;
     }
     :is(
         .nad-branch-edges .nad-overload .nad-edge-path
@@ -320,4 +287,51 @@ g.nad-disconnected > g.nad-disconnected {
 }
 :is(.nad-zoom-2000) .nad-textnode-highlight {
     transform: scale(1.3);
+}
+
+/* Help the user stay over a line */
+.hoverHelper mask polyline {
+    stroke-width: 0.25%;
+}
+.hoverHelper.nad-zoom-0 mask polyline {
+    stroke-width: 3px;
+}
+.hoverHelper.nad-zoom-2000 mask polyline {
+}
+.hoverHelper.nad-zoom-3500 mask polyline {
+}
+.hoverHelper.nad-zoom-6000 mask polyline {
+}
+.hoverHelper.nad-zoom-9000 mask polyline {
+    stroke-width: 0.2%;
+}
+.hoverHelper.nad-zoom-12000 mask polyline {
+    stroke-width: 0.1%;
+}
+.hoverHelper.nad-zoom-15000 mask polyline {
+    stroke-width: 0.1%;
+}
+
+.hoverHelper :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 35px;
+}
+.hoverHelper.nad-zoom-0 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+}
+.hoverHelper.nad-zoom-2000 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 55px;
+}
+.hoverHelper.nad-zoom-3500 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 75px;
+}
+.hoverHelper.nad-zoom-6000 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 105px;
+}
+.hoverHelper.nad-zoom-9000 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 155px;
+}
+.hoverHelper.nad-zoom-12000 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 200px;
+}
+.hoverHelper.nad-zoom-15000 :is(.nad-branch-edges .nad-edge-path:hover, .nad-3wt-edges .nad-edge-path:hover) {
+    stroke-width: 200px;
 }
