Add zoom adaptive styling for nodes tree
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -346,4 +346,5 @@ code {
 }
 .react-flow {
     --xy-edge-stroke-width-default: 1;
+    --xy-edge-stroke-selected-default: var(--xy-edge-stroke, currentColor);
 }
