--- a/src/index.css
+++ b/src/index.css
@@ -196,6 +196,9 @@ code {
 .sld-reactive-power {
     fill: blue;
 }
+.sld-current {
+        fill: var(--vl-color);
+}
 .sld-frame {
     fill: var(--sld-background-color, transparent);
 }
@@ -241,11 +244,24 @@ code {
 .sld-reactive-power .sld-label {
     dominant-baseline: middle;
 }
+.sld-current .sld-label {
+    dominant-baseline: middle;
+}
+.sld-percentage-permanent-limit {
+    dominant-baseline: middle;
+}
 
 @keyframes sld-overload-blink-animation {
     50% {
         stroke: #F50057;
         stroke-width: 4;
+    }
+}
+@keyframes sld-overload-blink-arrow-animation {
+    50% {
+        stroke: #F50057;
+        stroke-width: 4;
+        fill: #F50057;
     }
 }
 @keyframes sld-overvoltage-blink-animation {
@@ -262,6 +278,9 @@ code {
 }
 .sld-overload {
     animation: sld-overload-blink-animation 0.75s infinite steps(1, start);
+}
+.sld-extern-cell:has(.sld-overload) .sld-current polygon {
+    animation: sld-overload-blink-arrow-animation 0.75s infinite steps(1, start);
 }
 .sld-vl-overvoltage {
     animation: sld-overvoltage-blink-animation 0.75s infinite steps(1, start);
