set the battery color to voltage limit color

--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,10 @@ code {
     stroke: var(--vl-color, blue);
     fill: none;
 }
+.sld-battery {
+    stroke: var(--vl-color, blue);
+    fill: none;
+}
 .sld-two-wt {
     stroke: var(--vl-color, blue);
     fill: none;
