--- a/src/nad-index.css
+++ b/src/nad-index.css
@@ -10,7 +10,7 @@
 .nad-text-edges { /* Hidden for now */
     display: none;
 }
-.nad-disconnected .nad-edge-path {
+.nad-disconnected.nad-edge-path {
     stroke-dasharray: 0.45%, 0.45%;
 }
 .nad-vl-nodes .nad-busnode {
@@ -83,14 +83,11 @@ foreignObject.nad-text-nodes {
     stroke-linejoin: round;
     paint-order: stroke;
 }
-.nad-disconnected {
-    --vl-color: #808080;
-}
-g.nad-disconnected > g.nad-disconnected {
+
+g.nad-disconnected > .nad-disconnected.nad-edge-path {
     /* When both edges of a line are disconnected in a NAD, both of them and their parent have the .nad-disconnected class */
     --vl-color: #808080;
 }
-
 
 @keyframes line-blink {
     50% {
@@ -184,7 +181,7 @@ g.nad-disconnected > g.nad-disconnected {
 
 /* Makes the dashed lines' spaces consistent when zooming */
 :is(.nad-zoom-0, .nad-zoom-2000) :is(
-    .nad-disconnected .nad-edge-path
+    .nad-disconnected.nad-edge-path
     ) {
     stroke-dasharray: 10 10;
 }
