Add style for current and load feederInfos (#3411)
Apply a gray CSS style to the current and permanent limit percentage labels, when no overflow is executed.

--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,12 @@ code {
 .sld-reactive-power .sld-label {
     dominant-baseline: middle;
 }
+.sld-current-value .sld-label {
+    dominant-baseline: middle;
+}
+.sld-permanent-limit-percentage {
+    dominant-baseline: middle;
+}
 
 @keyframes sld-overload-blink-animation {
     50% {
