feat: adapt frontend to new sld legend
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier.pro@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ code {
 }
 .sld-node-infos {
     stroke: none;
-    fill: var(--vl-color, black);
+    background-color: var(--vl-color, black);
 }
 .sld-label {
     stroke: none;
