fix: on legend circle hover
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier.pro@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -291,41 +291,41 @@ code {
 }
 
 /* SLD Highlight Classes */
-.sld-voltage-level:has(circle.sld-bus-0:hover:not(.sld-winding), .sld-bus-0.sld-busbar-section:hover) .sld-bus-0.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-1:hover:not(.sld-winding), .sld-bus-1.sld-busbar-section:hover) .sld-bus-1.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-2:hover:not(.sld-winding), .sld-bus-2.sld-busbar-section:hover) .sld-bus-2.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-3:hover:not(.sld-winding), .sld-bus-3.sld-busbar-section:hover) .sld-bus-3.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-4:hover:not(.sld-winding), .sld-bus-4.sld-busbar-section:hover) .sld-bus-4.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-5:hover:not(.sld-winding), .sld-bus-5.sld-busbar-section:hover) .sld-bus-5.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-6:hover:not(.sld-winding), .sld-bus-6.sld-busbar-section:hover) .sld-bus-6.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-7:hover:not(.sld-winding), .sld-bus-7.sld-busbar-section:hover) .sld-bus-7.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-8:hover:not(.sld-winding), .sld-bus-8.sld-busbar-section:hover) .sld-bus-8.sld-busbar-section,
-.sld-voltage-level:has(circle.sld-bus-9:hover:not(.sld-winding), .sld-bus-9.sld-busbar-section:hover) .sld-bus-9.sld-busbar-section {
+.sld-voltage-level:has(.bus-circle.sld-bus-0:hover:not(.sld-winding), .sld-bus-0.sld-busbar-section:hover) .sld-bus-0.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-1:hover:not(.sld-winding), .sld-bus-1.sld-busbar-section:hover) .sld-bus-1.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-2:hover:not(.sld-winding), .sld-bus-2.sld-busbar-section:hover) .sld-bus-2.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-3:hover:not(.sld-winding), .sld-bus-3.sld-busbar-section:hover) .sld-bus-3.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-4:hover:not(.sld-winding), .sld-bus-4.sld-busbar-section:hover) .sld-bus-4.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-5:hover:not(.sld-winding), .sld-bus-5.sld-busbar-section:hover) .sld-bus-5.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-6:hover:not(.sld-winding), .sld-bus-6.sld-busbar-section:hover) .sld-bus-6.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-7:hover:not(.sld-winding), .sld-bus-7.sld-busbar-section:hover) .sld-bus-7.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-8:hover:not(.sld-winding), .sld-bus-8.sld-busbar-section:hover) .sld-bus-8.sld-busbar-section,
+.sld-voltage-level:has(.bus-circle.sld-bus-9:hover:not(.sld-winding), .sld-bus-9.sld-busbar-section:hover) .sld-bus-9.sld-busbar-section {
     stroke-width: 5px;
     cursor: default !important;
 }
-.sld-voltage-level:has(circle.sld-bus-0:hover:not(.sld-winding), .sld-bus-0.sld-busbar-section:hover) .sld-bus-0.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-1:hover:not(.sld-winding), .sld-bus-1.sld-busbar-section:hover) .sld-bus-1.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-2:hover:not(.sld-winding), .sld-bus-2.sld-busbar-section:hover) .sld-bus-2.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-3:hover:not(.sld-winding), .sld-bus-3.sld-busbar-section:hover) .sld-bus-3.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-4:hover:not(.sld-winding), .sld-bus-4.sld-busbar-section:hover) .sld-bus-4.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-5:hover:not(.sld-winding), .sld-bus-5.sld-busbar-section:hover) .sld-bus-5.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-6:hover:not(.sld-winding), .sld-bus-6.sld-busbar-section:hover) .sld-bus-6.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-7:hover:not(.sld-winding), .sld-bus-7.sld-busbar-section:hover) .sld-bus-7.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-8:hover:not(.sld-winding), .sld-bus-8.sld-busbar-section:hover) .sld-bus-8.sld-wire,
-.sld-voltage-level:has(circle.sld-bus-9:hover:not(.sld-winding), .sld-bus-9.sld-busbar-section:hover) .sld-bus-9.sld-wire {
+.sld-voltage-level:has(.bus-circle.sld-bus-0:hover:not(.sld-winding), .sld-bus-0.sld-busbar-section:hover) .sld-bus-0.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-1:hover:not(.sld-winding), .sld-bus-1.sld-busbar-section:hover) .sld-bus-1.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-2:hover:not(.sld-winding), .sld-bus-2.sld-busbar-section:hover) .sld-bus-2.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-3:hover:not(.sld-winding), .sld-bus-3.sld-busbar-section:hover) .sld-bus-3.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-4:hover:not(.sld-winding), .sld-bus-4.sld-busbar-section:hover) .sld-bus-4.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-5:hover:not(.sld-winding), .sld-bus-5.sld-busbar-section:hover) .sld-bus-5.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-6:hover:not(.sld-winding), .sld-bus-6.sld-busbar-section:hover) .sld-bus-6.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-7:hover:not(.sld-winding), .sld-bus-7.sld-busbar-section:hover) .sld-bus-7.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-8:hover:not(.sld-winding), .sld-bus-8.sld-busbar-section:hover) .sld-bus-8.sld-wire,
+.sld-voltage-level:has(.bus-circle.sld-bus-9:hover:not(.sld-winding), .sld-bus-9.sld-busbar-section:hover) .sld-bus-9.sld-wire {
     stroke-width: 3px;
 }
-.sld-voltage-level:has(circle.sld-bus-0:hover:not(.sld-winding), .sld-bus-0.sld-busbar-section:hover) circle.sld-bus-0.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-1:hover:not(.sld-winding), .sld-bus-1.sld-busbar-section:hover) circle.sld-bus-1.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-2:hover:not(.sld-winding), .sld-bus-2.sld-busbar-section:hover) circle.sld-bus-2.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-3:hover:not(.sld-winding), .sld-bus-3.sld-busbar-section:hover) circle.sld-bus-3.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-4:hover:not(.sld-winding), .sld-bus-4.sld-busbar-section:hover) circle.sld-bus-4.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-5:hover:not(.sld-winding), .sld-bus-5.sld-busbar-section:hover) circle.sld-bus-5.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-6:hover:not(.sld-winding), .sld-bus-6.sld-busbar-section:hover) circle.sld-bus-6.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-7:hover:not(.sld-winding), .sld-bus-7.sld-busbar-section:hover) circle.sld-bus-7.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-8:hover:not(.sld-winding), .sld-bus-8.sld-busbar-section:hover) circle.sld-bus-8.sld-node-infos,
-.sld-voltage-level:has(circle.sld-bus-9:hover:not(.sld-winding), .sld-bus-9.sld-busbar-section:hover) circle.sld-bus-9.sld-node-infos {
+.sld-voltage-level:has(.bus-circle.sld-bus-0:hover:not(.sld-winding), .sld-bus-0.sld-busbar-section:hover) .bus-circle.sld-bus-0.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-1:hover:not(.sld-winding), .sld-bus-1.sld-busbar-section:hover) .bus-circle.sld-bus-1.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-2:hover:not(.sld-winding), .sld-bus-2.sld-busbar-section:hover) .bus-circle.sld-bus-2.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-3:hover:not(.sld-winding), .sld-bus-3.sld-busbar-section:hover) .bus-circle.sld-bus-3.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-4:hover:not(.sld-winding), .sld-bus-4.sld-busbar-section:hover) .bus-circle.sld-bus-4.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-5:hover:not(.sld-winding), .sld-bus-5.sld-busbar-section:hover) .bus-circle.sld-bus-5.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-6:hover:not(.sld-winding), .sld-bus-6.sld-busbar-section:hover) .bus-circle.sld-bus-6.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-7:hover:not(.sld-winding), .sld-bus-7.sld-busbar-section:hover) .bus-circle.sld-bus-7.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-8:hover:not(.sld-winding), .sld-bus-8.sld-busbar-section:hover) .bus-circle.sld-bus-8.sld-node-infos,
+.sld-voltage-level:has(.bus-circle.sld-bus-9:hover:not(.sld-winding), .sld-bus-9.sld-busbar-section:hover) .bus-circle.sld-bus-9.sld-node-infos {
     stroke-width: 3px;
     stroke: var(--vl-color, black);
 }
