[Fix] Hide low voltages in the NAD when zoomed out (#3617)
Fix the class style names for voltage levels so that the behavior of hiding low voltage levels when zooming out on the NAD works again.

--- a/src/nad-index.css
+++ b/src/nad-index.css
@@ -255,14 +255,14 @@ g.nad-disconnected > .nad-disconnected.nad-edge-path {
 
 /* Hides the voltage levels 0 to 50 when zoomed out. */
 :is(.nad-zoom-6000, .nad-zoom-9000, .nad-zoom-12000, .nad-zoom-15000) :is(
-    .nad-vl0to30, .nad-vl30to50
+    .nad-voltage-level-1, .nad-voltage-level-2
     ) {
     display: none;
 }
 
-/* Hides the voltage levels 50 to 120 when zoomed out. */
+/* Hides the voltage levels 50 to 100 when zoomed out. */
 .nad-zoom-15000 :is(
-    .nad-vl50to70, .nad-vl70to120
+    .nad-voltage-level-3, .nad-voltage-level-4
     ) {
     display: none;
 }
